# dbt-forge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  cli-ci.yml  commit-messages.yml  release.yml  website-ci.yml
cli/: README.md  pyproject.toml
cli/src/dbt_forge/: __init__.py  changelog.py  contracts.py  cost.py  docs.py  lint_config.py  main.py  manifest.py  mesh.py  presets.py  ref_graph.py  release_assistant.py  scanner.py  sql_parser.py
cli/src/dbt_forge/cli/: add.py  changelog_cmd.py  contracts_cmd.py  cost_cmd.py  docs_cmd.py  doctor.py  impact.py  init.py  lint.py  migrate.py  status.py  update.py
cli/src/dbt_forge/generator/: project.py
cli/src/dbt_forge/introspect/: base.py  connectors.py  profile_reader.py
cli/src/dbt_forge/llm/: base.py  prompts.py  providers.py
cli/src/dbt_forge/prompts/: questions.py
cli/src/dbt_forge/templates/: .editorconfig.j2  .env.example.j2  .gitlab-ci.yml.j2  .pre-commit-config.yaml.j2  CODEOWNERS.j2  README.md.j2  pyproject.toml.j2  selectors.yml.j2
cli/src/dbt_forge/templates/add/: exposure.yml.j2  int_stub.sql.j2  introspected_sources.yml.j2  introspected_stg_model.sql.j2  macro.sql.j2  mart_model.sql.j2  model.sql.j2  model.yml.j2  seed.csv.j2  seed.yml.j2  snapshot.sql.j2  stg_stub.sql.j2  test_data.sql.j2  test_schema.yml.j2  test_unit.yml.j2
cli/src/dbt_forge/templates/macros/: README.md.j2  example_macro.sql.j2  generate_schema_name.sql.j2
cli/src/dbt_forge/templates/mesh/: Makefile.j2  dbt_project.yml.j2  dependencies.yml.j2  group_definition.yml.j2  model_with_access.sql.j2  model_with_access.yml.j2  root_README.md.j2
cli/src/dbt_forge/templates/migrate/: migration_report.md.j2  model.sql.j2  model.yml.j2  source.yml.j2
cli/src/dbt_forge/templates/models/marts/: __example__exposures.yml.j2  __mart__models.yml.j2
cli/src/dbt_forge/templates/models/marts/semantic_models/: sem_orders.yml.j2
cli/src/dbt_forge/templates/models/staging/example_source/: _example_source__models.yml.j2  _example_source__sources.yml.j2
cli/src/dbt_forge/templates/profiles/: bigquery.yml.j2  duckdb.yml.j2  redshift.yml.j2  spark.yml.j2  trino.yml.j2
cli/src/dbt_forge/templates/seeds/: _example_seed__seeds.yml.j2
cli/src/dbt_forge/templates/snapshots/: example_snapshot.sql.j2
cli/src/dbt_forge/templates/tests/: assert_positive_total_amount.sql.j2
cli/src/dbt_forge/templates/tests/unit/: test_stg_example.yml.j2
cli/src/dbt_forge/ui/: theme.py
cli/tests/: conftest.py  test_add_command.py  test_changelog.py  test_cli.py  test_config.py  test_contracts.py  test_cost.py  test_docs_command.py  test_doctor.py  test_e2e_duckdb.py  test_generated_project_structure.py  test_generator.py  test_impact.py  test_introspect.py  test_lint.py  test_llm_providers.py  test_mesh.py  test_migrate.py  test_phase1_features.py  test_phase2_add_commands.py  test_phase3_features.py  test_ref_graph.py  test_release_assistant.py  test_sql_parser.py  test_theme.py
scripts/: release_assistant.py
src/dbt_forge/: __init__.py  main.py
src/dbt_forge/cli/: add.py  init.py
src/dbt_forge/generator/: project.py  renderer.py
src/dbt_forge/prompts/: questions.py
src/dbt_forge/templates/: .env.j2  .gitignore.j2  .sqlfluff.j2  README.md.j2  bitbucket-pipelines.yml.j2  dbt_project.yml.j2  packages.yml.j2
src/dbt_forge/templates/.github/workflows/: dbt_ci.yml.j2
src/dbt_forge/templates/add/: int_stub.sql.j2  mart_models.yml.j2  source_models.yml.j2  source_sources.yml.j2
src/dbt_forge/templates/models/marts/: __mart__models.yml.j2  orders.sql.j2
src/dbt_forge/templates/models/staging/example_source/: _example_source__models.yml.j2  stg_example_source__orders.sql.j2
src/dbt_forge/templates/profiles/: databricks.yml.j2  postgresql.yml.j2  snowflake.yml.j2
src/dbt_forge/templates/tests/unit/: test_stg_example.yml.j2
tests/: test_add_command.py  test_cli.py  test_config.py  test_generated_project_structure.py  test_generator.py
website/: EDITORIAL_GUIDE.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
website/public/: robots.txt
website/src/components/: SeoHead.astro  StarlightHead.astro
website/src/content/docs/docs/: development.md  getting-started.md  index.mdx  project-structure.md
website/src/content/docs/docs/cli/: add.md  changelog.md  contracts.md  (+10 more)
website/src/pages/: changelog.astro  github.astro  index.astro
website/src/styles/: site.css
(+5 files in other folders)
